src/test/deca/context/valid/our_tests/alex-If-simple.deca
// Description:
//    Test valide d'un unique if
//
// Resultats:
//    EXIT SUCCESS
// 
// Historique:
//    20/01/2017

{
    if(true) {
        println("EXIT SUCCESS");
    }
}
