src/test/deca/context/invalid/our_tests/jb-opArith-simple1.deca
// Description:
//    OpArith Contextual error
//
// Resultats:
//    Ligne 11: Operation avec autre chose qu'un entier ou un floatant (OpGauche)
// 
// Historique:
//    cree le 18/01/2017

{
true + 1;
}
